CHANGES IN VERSION 1.5.2
------------------------
 o more accurate ylim & angle for circular layout <2016-05-10, Tue>
   + https://github.com/GuangchuangYu/ggtree/issues/40
 o supports phylo4d object <2016-05-10, Tue>
   + https://github.com/GuangchuangYu/ggtree/issues/47
 
CHANGES IN VERSION 1.5.1
------------------------
 o update vignettes <2016-05-10, Tue>
   + add geom_range example in treeImport
   + add geom_strip and geom_taxalink example in treeAnnotation
   + add ggtreeUtilities vignette
 o gheatmap now works with data.frame of only one column <2016-05-09, Mon>
   + contributed by Justin Silverman <jsilve24@gmail.com>
   + https://github.com/GuangchuangYu/ggtree/pull/57
 o geom_strip for associated taxa <2016-05-09, Mon>
   + https://github.com/GuangchuangYu/ggtree/issues/52
 
CHANGES IN VERSION 1.4.0
------------------------
 o BioC 3.3 released <2016-05-05, Thu>
 
CHANGES IN VERSION 1.3.16
------------------------
 o geom_treescale() supports family argument <2016-04-27, Wed>
   + https://github.com/GuangchuangYu/ggtree/issues/56
 o update fortify.phylo to work with phylo that has missing value of edge length <2016-04-21, Thu>
   + https://github.com/GuangchuangYu/ggtree/issues/54
 o support passing textConnection(text_string) as a file <2016-04-21, Thu>
   + contributed by Casey Dunn <casey_dunn@brown.edu>
   + https://github.com/GuangchuangYu/ggtree/pull/55#issuecomment-212859693
 
CHANGES IN VERSION 1.3.15
------------------------
 o geom_tiplab2 supports parameter hjust <2016-04-18, Mon>
 o geom_tiplab and geom_tiplab2 support using geom_label2 by passing geom="label" <2016-04-07, Thu>
 o geom_label2 that support subsetting <2016-04-07, Thu>
 o geom_tiplab2 for adding tip label of circular layout <2016-04-06, Wed>
 o use plot$plot_env to access ggplot2 parameter <2016-04-06, Wed>
 o geom_taxalink for connecting related taxa <2016-04-01, Fri> 
 o geom_range for adding range of HPD to present uncertainty of evolutionary inference <2016-04-01, Fri>
 