@@ -4,7 +4,8 @@
 \alias{geom_hilight}
 \title{geom_hilight}
 \usage{
-geom_hilight(node, fill = "steelblue", alpha = 0.5)
+geom_hilight(node, fill = "steelblue", alpha = 0.5, extend = 0,
+  extendto = NULL)
 }
 \arguments{
 \item{node}{selected node to hilight}
@@ -12,6 +13,10 @@ geom_hilight(node, fill = "steelblue", alpha = 0.5)
 \item{fill}{color fill}
 
 \item{alpha}{alpha (transparency)}
+
+\item{extend}{extend xmax of the rectangle}
+
+\item{extendto}{extend xmax to extendto}
 }
 \value{
 ggplot2
