@@ -1,5 +1,8 @@
 CHANGES IN VERSION 1.5.2
 ------------------------
+ o add extend, extendto parameter in geom_hilight <2016-05-10, Tue>
+ o geom_hilight now supports hilight tips <2016-05-10, Tue>
+   + https://github.com/GuangchuangYu/ggtree/issues/53
  o more accurate ylim & angle for circular layout <2016-05-10, Tue>
    + https://github.com/GuangchuangYu/ggtree/issues/40
  o supports phylo4d object <2016-05-10, Tue>
